@@ -1,3 +1,6 @@
+20001125
+ - (djm) Give up privs when reading seed file
+
 20001123
  - (bal) Merge OpenBSD changes:
    - markus@cvs.openbsd.org  2000/11/15 22:31:36
